# AA_service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: CI.yml
additional_services/: mail_sender.py  token_warehouse.py
migrations/: env.py
migrations/versions/: 0b8d636b8a4c_.py  341cde3d96cf_.py  a9a0e2fd4b37_.py
scripts/: db_default_tables_values.py
src/: main.py
src/api/: dependencies.py
src/api/routers/: __init__.py  auth.py  core.py  permission.py  role.py  user.py
src/core/: config.py
src/models/: __init__.py  core.py  user.py
src/ports/: database_interface.py
src/repositories/: core.py  permission_repository.py  roles_repository.py  user_repository.py
src/schemas/: roles_and_permissions.py  user.py
src/services/: exceptions.py  permission_service.py  role_service.py  token_service.py  user_service.py  utils.py
tests/: conftest.py  utils.py
tests/e2e_test/: test_auth.py
tests/unit_test/: test_exceptions.py  test_token_service.py  test_utils.py
