[tool.poetry]
name = "aa-service"
version = "0.1.0"
description = ""
authors = ["AntonPhk <phk.anton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
ruff = "^0.5.0"
pre-commit = "^3.7.1"
pydantic-settings = "^2.3.4"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
uvicorn = "^0.30.1"
passlib = "^1.7.4"
pyjwt = "^2.8.0"
pytest = "^8.2.2"
redis = "^5.0.7"
pytest-asyncio = "^0.23.8"
pytest-cov = "^5.0.0"
testcontainers = "^4.7.2"
faker = "^26.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
pythonpath = [
    ".", "src"
]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = [
    "src"
]


